--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,26 @@
 .loading-map {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.8);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.search-container {
+  width: 250px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 999;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.search-container > input {
+  border: 0;
+  outline: 0;
 }
